[tool.poetry]
name = "runekit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
include = ["runekit/_resources.py"]

[tool.poetry.dependencies]
python = "<3.13,>=3.8"
requests = "^2.26.0"
PySide6 = "^6.6.1"
Pillow = "^8.3.1"
sysv-ipc = [{ version = "^1.1.0", platform = "linux" }]
xcffib = [{ version = "^0.11.1", platform = "linux" }]
pyobjc-framework-Quartz = [{ version = "10.1", platform = "darwin" }]
pyobjc-framework-ApplicationServices = [
    { version = "10.1", platform = "darwin" },
]
pyobjc-framework-CoreText = [{ version = "10.1", platform = "darwin" }]
click = "^8.0.1"
psutil = "^5.8.0"
opencv-python-headless = "^4.8.1.78"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pyinstaller = [{ version = "^4.5.1", platform = "darwin" }]

[tool.poetry.scripts]
runekit = 'runekit.main:main'

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

